force-app/main/default/objects/BTN_CV__c/BTN_CV__c.object-meta.xml
<CustomObject>
    <label>Candidate</label>
    <nameField>
        <displayFormat>CID{00000000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>