force-app/main/default/objects/BTN_CV__c/fields/Account_frm__c.field-meta.xml
<CustomField>
    <fullName>Account_frm__c</fullName>
    <formula>ResourceRequest__r.Account_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>