force-app/main/default/objects/BTN_CV__c/fields/AttachedFileLink__c.field-meta.xml
<CustomField>
    <fullName>AttachedFileLink__c</fullName>
    <formula>IF ( LastAttachmentId__c != null,
            HYPERLINK(&apos;/servlet/servlet.FileDownload?file=&apos; +  LastAttachmentId__c, &apos;Link&apos;, &apos;_blank&apos;),
            &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>