force-app/main/default/objects/BTN_CV__c/fields/ContactFirstName_frm__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName_frm__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>