force-app/main/default/objects/BTN_CV__c/fields/ContactId_frm__c.field-meta.xml
<CustomField>
    <fullName>ContactId_frm__c</fullName>
    <formula>ContactLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Id</label>
    <type>Text</type>
</CustomField>