force-app/main/default/objects/BTN_CV__c/fields/ContactLastName_frm__c.field-meta.xml
<CustomField>
    <fullName>ContactLastName_frm__c</fullName>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>