force-app/main/default/objects/BTN_CV__c/fields/ContactLink__c.field-meta.xml
<CustomField>
    <fullName>ContactLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Contact__r.Id ,  Contact__r.Name_frm__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>