force-app/main/default/objects/BTN_CV__c/fields/ContactName_frm__c.field-meta.xml
<CustomField>
    <fullName>ContactName_frm__c</fullName>
    <formula>ContactFirstName_frm__c + &apos; &apos; + ContactLastName_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>