force-app/main/default/objects/BTN_CV__c/fields/ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordType__c</fullName>
    <formula>Contact__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Type</label>
    <type>Text</type>
</CustomField>