force-app/main/default/objects/BTN_CV__c/fields/CreatedDate_frm__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_frm__c</fullName>
    <formula>IF(ISBLANK(ImportCreatedDate__c), CreatedDate, ImportCreatedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>