force-app/main/default/objects/BTN_CV__c/fields/DeliveryDeadline_frm__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeadline_frm__c</fullName>
    <formula>ResourceRequest__r.DeliveryDeadline_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery deadline</label>
    <type>Date</type>
</CustomField>