force-app/main/default/objects/BTN_CV__c/fields/LastAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>LastAttachmentId__c</fullName>
    <label>Last Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>