force-app/main/default/objects/BTN_CV__c/fields/Level_frm__c.field-meta.xml
<CustomField>
    <fullName>Level_frm__c</fullName>
    <formula>ResourceRequest__r.Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>