force-app/main/default/objects/BTN_CV__c/fields/Opportunity_frm__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_frm__c</fullName>
    <formula>ResourceRequest__r.Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>