force-app/main/default/objects/BTN_CV__c/fields/Position_Name_frm__c.field-meta.xml
<CustomField>
    <fullName>Position_Name_frm__c</fullName>
    <formula>ResourceRequest__r.Position_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Name</label>
    <type>Text</type>
</CustomField>