force-app/main/default/objects/BTN_CV__c/fields/RequestCreationDate__c.field-meta.xml
<CustomField>
    <fullName>RequestCreationDate__c</fullName>
    <formula>ResourceRequest__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request creation date</label>
    <type>DateTime</type>
</CustomField>