force-app/main/default/objects/BTN_CV__c/fields/Requestor_frm__c.field-meta.xml
<CustomField>
    <fullName>Requestor_frm__c</fullName>
    <formula>ResourceRequest__r.Requestor_frm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor</label>
    <type>Text</type>
</CustomField>