force-app/main/default/objects/BTN_CV__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <formula>TEXT( ResourceRequest__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Status</label>
    <type>Text</type>
</CustomField>