force-app/main/default/objects/BTN_CV__c/fields/ResourceRequest__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequest__c</fullName>
    <label>Resource request</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Resource request must not be closed</errorMessage>
        <filterItems>
            <field>BTN_ResourceRequest__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed Delivered, Closed Rejected</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BTN_ResourceRequest__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>CVs_lkp</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>