force-app/main/default/objects/BTN_CV__c/fields/ResourceRequestName__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequestName__c</fullName>
    <description>Field to contain Resource Request Name (Autonumber)
            All to make painless duplicate catcher (BRITCRM-284)</description>
    <label>Resource Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>