force-app/main/default/objects/BTN_CV__c/fields/ResourceRequestName_frm__c.field-meta.xml
<CustomField>
    <fullName>ResourceRequestName_frm__c</fullName>
    <formula>ResourceRequest__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Request Name</label>
    <type>Text</type>
</CustomField>