force-app/main/default/objects/BTN_CV__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted to external</fullName>
            </value>
            <value>
                <fullName>Interview-in-progress</fullName>
            </value>
            <value>
                <fullName>Approved by external</fullName>
            </value>
            <value>
                <fullName>Contract signed</fullName>
            </value>
            <value>
                <fullName>Contract signed with different external</fullName>
            </value>
            <value>
                <fullName>Rejected by external</fullName>
            </value>
            <value>
                <fullName>Rejected by us</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Offer expired</fullName>
            </value>
            <value>
                <fullName>Closed in ZOHO</fullName>
                <isActive>false</isActive>
                <label>Closed in ZOHO</label>
            </value>
            <value>
                <fullName>Rejected by internal</fullName>
                <isActive>false</isActive>
                <label>Rejected by internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>