force-app/main/default/objects/BTN_CV__c/fields/Technology_frm__c.field-meta.xml
<CustomField>
    <fullName>Technology_frm__c</fullName>
    <formula>ResourceRequest__r.Technology__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technology</label>
    <type>Text</type>
</CustomField>