force-app/main/default/objects/BTN_CV__c/validationRules/vContact.validationRule-meta.xml
<ValidationRule>
    <fullName>vContact</fullName>
    <active>true</active>
    <description>Force HR / RM to fill Contact lookup. When RT is Internal or External and Status approved.</description>
    <errorConditionFormula>(ISPICKVAL(Status__c, &apos;Approved&apos;)) &amp;&amp;
            ISBLANK(Contact__c)</errorConditionFormula>
    <errorMessage>Please specify Contact</errorMessage>
</ValidationRule>