force-app/main/default/objects/BTN_CV__c/listViews/Contract_signed.listView-meta.xml
<ListView>
    <fullName>Contract_signed</fullName>
    <columns>NAME</columns>
    <columns>ContactRecordType__c</columns>
    <columns>ContactFirstName_frm__c</columns>
    <columns>ContactLastName_frm__c</columns>
    <columns>AttachedFileLink__c</columns>
    <columns>Status__c</columns>
    <columns>ResourceRequest__c</columns>
    <columns>Account_frm__c</columns>
    <columns>Position_Name_frm__c</columns>
    <columns>Requestor_frm__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RequestCreationDate__c</columns>
    <columns>DeliveryDeadline_frm__c</columns>
    <columns>DateApproved__c</columns>
    <columns>CreatedDate_frm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Contract signed</value>
    </filters>
    <label>Contract signed</label>
    <language>en_US</language>
</ListView>