force-app/main/default/objects/BTN_CV__c/listViews/Potential_Onboardings.listView-meta.xml
<ListView>
    <fullName>Potential_Onboardings</fullName>
    <columns>NAME</columns>
    <columns>ContactRecordType__c</columns>
    <columns>ContactFirstName_frm__c</columns>
    <columns>ContactLastName_frm__c</columns>
    <columns>AttachedFileLink__c</columns>
    <columns>Status__c</columns>
    <columns>ResourceRequest__c</columns>
    <columns>Account_frm__c</columns>
    <columns>Position_Name_frm__c</columns>
    <columns>Requestor_frm__c</columns>
    <columns>RequestCreationDate__c</columns>
    <columns>DeliveryDeadline_frm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContactRecordType__c</field>
        <operation>equals</operation>
        <value>Recruit</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Contract signed</value>
    </filters>
    <label>Potential Onboardings</label>
    <language>en_US</language>
</ListView>