force-app/main/default/objects/BTN_CV__c/listViews/RMItems.listView-meta.xml
<ListView>
    <fullName>RMItems</fullName>
    <columns>NAME</columns>
    <columns>ContactRecordType__c</columns>
    <columns>ContactFirstName_frm__c</columns>
    <columns>ContactLastName_frm__c</columns>
    <columns>AttachedFileLink__c</columns>
    <columns>Status__c</columns>
    <columns>ResourceRequest__c</columns>
    <columns>Account_frm__c</columns>
    <columns>Position_Name_frm__c</columns>
    <columns>Requestor_frm__c</columns>
    <columns>RequestCreationDate__c</columns>
    <columns>DeliveryDeadline_frm__c</columns>
    <filterScope>Everything</filterScope>
    <label>Source: RM</label>
    <language>en_US</language>
</ListView>