force-app/main/default/objects/BTN_CV__c/listViews/Status_Open.listView-meta.xml
<ListView>
    <fullName>Status_Open</fullName>
    <columns>NAME</columns>
    <columns>ContactRecordType__c</columns>
    <columns>ContactFirstName_frm__c</columns>
    <columns>ContactLastName_frm__c</columns>
    <columns>AttachedFileLink__c</columns>
    <columns>Status__c</columns>
    <columns>ResourceRequest__c</columns>
    <columns>Account_frm__c</columns>
    <columns>Position_Name_frm__c</columns>
    <columns>Requestor_frm__c</columns>
    <columns>RequestCreationDate__c</columns>
    <columns>DeliveryDeadline_frm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RequestStatus__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Status: Open</label>
    <language>en_US</language>
</ListView>